Implemented the bitwise solution of n queens

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -25,6 +25,7 @@
     <script src="src/Board.js"></script>
     <script src="src/BoardView.js"></script>
     <script src="src/solvers.js"></script>
+    <script src="src/solvers_bitwise.js"></script>
 
     <!-- tests -->
     <script src="spec/BoardSpec.js"></script>
